--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,20 +13,34 @@
         android:theme="@style/Theme.App0"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
-            android:exported="true"
-
-            >
+            android:name=".SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".MainActivity"/>
     </application>
-
 </manifest>
+<!--change the first activity from MainActivity to SplashActivity. The origial ver is below.-->
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true"-->
+
+<!--            >-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
+
+<!--    </application>-->
+
+<!--</manifest>-->
 
 <!--android:theme="@style/AppTheme" add after android:exported="true" in activity-->
 <!--comments cannot be inserted within the code in this file, if you want to add comment, add below here-->
