--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,14 +12,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.App0"
         tools:targetApi="31">
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
+            android:theme="@style/Theme.App0">
 
-            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -28,5 +28,5 @@
 
 </manifest>
 
-<!--android:theme="@style/AppTheme" add after android:exported="true" in activity-->
-<!--comments cannot be inserted within the code in this file, if you want to add comment, add below here-->
+    <!-- Comments should be placed outside the root tag -->
+    <!-- Ensure that Theme.App0 exists in themes.xml -->
