--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,38 @@
         android:theme="@style/Theme.App0"
         tools:targetApi="31">
 
+
+<!--        <activity-->
+<!--            android:name=".ProgressPage"-->
+<!--            android:exported="false" />-->
         <activity
             android:name=".MainActivity"
-            android:exported="true"
-            android:theme="@style/Theme.App0">
+            android:exported="false" />
 
+        <activity
+            android:name=".ui.Activity.LoginPage"
+            android:exported="false"/>
+
+        <activity
+            android:name=".ui.Activity.SplashActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+<!--        <activity-->
+<!--            android:name=".MainActivity"-->
+<!--            android:exported="true"-->
+<!--            android:theme="@style/Theme.App0">-->
+
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
+<!--        </activity>-->
 
     </application>
 
