--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,11 +14,12 @@
         tools:targetApi="31">
 
 
-<!--        <activity-->
-<!--            android:name=".ProgressPage"-->
-<!--            android:exported="false" />-->
         <activity
-            android:name=".MainActivity"
+            android:name=".ProgressPage"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.Activity.MoodActivity"
             android:exported="false" />
 
         <activity
@@ -35,16 +36,16 @@
             </intent-filter>
         </activity>
 
-<!--        <activity-->
-<!--            android:name=".MainActivity"-->
-<!--            android:exported="true"-->
-<!--            android:theme="@style/Theme.App0">-->
+        <!--        <activity-->
+        <!--            android:name=".MainActivity"-->
+        <!--            android:exported="true"-->
+        <!--            android:theme="@style/Theme.App0">-->
 
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+        <!--            <intent-filter>-->
+        <!--                <action android:name="android.intent.action.MAIN" />-->
+        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
+        <!--            </intent-filter>-->
+        <!--        </activity>-->
 
     </application>
 
